# storage/api-docs/api-docs.json
@@ -40,12 +40,12 @@
                                     "email": {
                                         "type": "string",
                                         "format": "email",
-                                        "example": "john@example.com"
+                                        "example": "test@mail.com"
                                     },
                                     "password": {
                                         "type": "string",
                                         "format": "password",
-                                        "example": "secret123"
+                                        "example": "password"
                                     }
                                 },
                                 "type": "object"
@@ -171,12 +171,12 @@
                                     "email": {
                                         "type": "string",
                                         "format": "email",
-                                        "example": "john@example.com"
+                                        "example": "test@main.com"
                                     },
                                     "password": {
                                         "type": "string",
                                         "format": "password",
-                                        "example": "secret123"
+                                        "example": "password"
                                     },
                                     "password_confirmation": {
                                         "type": "string",
@@ -313,6 +313,10 @@
                                             "example": "recipes/abc123.jpg",
                                             "nullable": true
                                         },
+                                        "visibility": {
+                                            "type": "string",
+                                            "example": "public"
+                                        },
                                         "created_at": {
                                             "type": "string",
                                             "format": "date-time",
@@ -390,6 +394,10 @@
                                         "description": "Optional: Replace image (deletes old one)",
                                         "type": "string",
                                         "format": "binary"
+                                    },
+                                    "visibility": {
+                                        "description": "Replace visibility",
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -432,6 +440,10 @@
                                             "type": "string",
                                             "example": "recipes/xyz789.jpg",
                                             "nullable": true
+                                        },
+                                        "visibility": {
+                                            "type": "string",
+                                            "example": "public"
                                         },
                                         "created_at": {
                                             "type": "string",
@@ -588,6 +600,10 @@
                                                 "example": "recipes/abc123.jpg",
                                                 "nullable": true
                                             },
+                                            "visibility": {
+                                                "type": "string",
+                                                "example": "public"
+                                            },
                                             "created_at": {
                                                 "type": "string",
                                                 "format": "date-time",
@@ -653,6 +669,10 @@
                                                 "type": "string",
                                                 "example": "recipes/abc123.jpg",
                                                 "nullable": true
+                                            },
+                                            "visibility": {
+                                                "type": "string",
+                                                "example": "public"
                                             },
                                             "created_at": {
                                                 "type": "string",
@@ -724,6 +744,10 @@
                                         "description": "Recipe image (optional)",
                                         "type": "string",
                                         "format": "binary"
+                                    },
+                                    "visibility": {
+                                        "description": "Recipe visibility",
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -766,6 +790,10 @@
                                             "type": "string",
                                             "example": "recipes/abc123.jpg",
                                             "nullable": true
+                                        },
+                                        "visibility": {
+                                            "type": "string",
+                                            "example": "public"
                                         },
                                         "created_at": {
                                             "type": "string",
